--- a/microservice-config/Dockerfile
+++ b/microservice-config/Dockerfile
@@ -1,4 +1,5 @@
-FROM openjdk:17-jdk-alpine
+FROM openjdk:17-slim
 VOLUME /tmp
-COPY target/config-server-0.0.1-SNAPSHOT.jar app.jar
-ENTRYPOINT ["java","-jar","/app.jar"]
+COPY target/microservice-config-0.0.1-SNAPSHOT.jar app_microservice-config.jar
+EXPOSE 8888
+ENTRYPOINT ["java","-jar","app_microservice-config.jar"]
