--- a/microservice-eureka/Dockerfile
+++ b/microservice-eureka/Dockerfile
@@ -1,4 +1,5 @@
-FROM openjdk:17-jdk-alpine
+FROM openjdk:17-slim
 VOLUME /tmp
-COPY target/msvc-eureka-0.0.1-SNAPSHOT.jar app.jar
-ENTRYPOINT ["java","-jar","/app.jar"]
+COPY target/microservice-eureka-0.0.1-SNAPSHOT.jar app_microservice-eureka.jar
+EXPOSE 8761
+ENTRYPOINT ["java","-jar","app_microservice-eureka.jar"]
