--- a/microservice-eureka/src/main/resources/application.yml
+++ b/microservice-eureka/src/main/resources/application.yml
@@ -3,3 +3,13 @@ spring:
     name: msvc-eureka
   config:
     import: optional:configserver:http://config-server:8888
+
+eureka:
+  client:
+    registerWithEureka: false
+    fetchRegistry: false
+  instance:
+    hostname: eureka-server
+
+server:
+  port: 8761
