--- a/microservice-gateway/src/main/resources/application.yml
+++ b/microservice-gateway/src/main/resources/application.yml
@@ -3,3 +3,8 @@ spring:
     name: msvc-gateway
   config:
     import: optional:configserver:http://config-server:8888
+
+eureka:
+  client:
+    serviceUrl:
+      defaultZone: http://eureka-server:8761/eureka/
