--- a/microservice-config/src/main/resources/application.yml
+++ b/microservice-config/src/main/resources/application.yml
@@ -1,13 +1,14 @@
 spring:
   application:
     name: config-server
-  profiles:
-    active: native
   cloud:
     config:
       server:
         native:
           search-locations: classpath:/configurations
-
 server:
   port: 8888
+
+logging:
+  level:
+    root: DEBUG
