--- a/microservice-eureka/src/main/resources/application.yml
+++ b/microservice-eureka/src/main/resources/application.yml
@@ -2,14 +2,4 @@ spring:
   application:
     name: msvc-eureka
   config:
-    import: optional:configserver:http://config-server:8888
-
-eureka:
-  client:
-    registerWithEureka: false
-    fetchRegistry: false
-  instance:
-    hostname: eureka-server
-
-server:
-  port: 8761
+    import: optional:configserver:http://localhost:8888
