--- a/microservice-admin/src/main/resources/application.yml
+++ b/microservice-admin/src/main/resources/application.yml
@@ -2,4 +2,9 @@ spring:
   application:
     name: msvc-admin
   config:
-    import: optional:configserver:http://localhost:8888
+    import: optional:configserver:http://config-server:8888
+
+eureka:
+  client:
+    service-url:
+      defaultZone: http://eureka-server:8761/eureka
