--- a/microservice-appointment/src/main/resources/application.yml
+++ b/microservice-appointment/src/main/resources/application.yml
@@ -2,4 +2,4 @@ spring:
   application:
     name: msvc-appointment
   config:
-    import: optional:configserver:http://localhost:8888
+    import: optional:configserver:http://config-server:8888
