--- a/microservice-config/src/main/resources/configurations/msvc-eureka.yml
+++ b/microservice-config/src/main/resources/configurations/msvc-eureka.yml
@@ -7,7 +7,7 @@ spring:
 
 eureka:
   instance:
-    hostname: eureka-server
+    hostname: localhost
   client:
     registerWithEureka: false
     fetchRegistry: false
