--- a/microservice-gateway/src/main/resources/application.yml
+++ b/microservice-gateway/src/main/resources/application.yml
@@ -1,10 +1,5 @@
 spring:
-  application:
-    name: msvc-gateway
   config:
-    import: optional:configserver:http://config-server:8888
-
-eureka:
-  client:
-    serviceUrl:
-      defaultZone: http://eureka-server:8761/eureka/
+    import: optional:configserver:http//localhost:8888
+  application:
+    name: msvs-gateway
