--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,6 +7,8 @@ services:
       - "8888:8888"
     networks:
       - microservices-network
+    environment:
+      - SPRING_PROFILES_ACTIVE=default
     healthcheck:
       test: ["CMD-SHELL", "curl -f http://localhost:8888/actuator/health || exit 1"]
       interval: 30s
@@ -22,6 +24,8 @@ services:
         condition: service_healthy
     networks:
       - microservices-network
+    environment:
+      - SPRING_PROFILES_ACTIVE=default
     healthcheck:
       test: ["CMD-SHELL", "curl -f http://localhost:8761/actuator/health || exit 1"]
       interval: 30s
@@ -55,7 +59,7 @@ services:
     networks:
       - microservices-network
     environment:
-      - SPRING_PROFILES_ACTIVE=docker
+      - SPRING_PROFILES_ACTIVE=default
     healthcheck:
       test: ["CMD-SHELL", "curl -f http://localhost:8097/actuator/health || exit 1"]
       interval: 30s
@@ -73,6 +77,8 @@ services:
         condition: service_healthy
     networks:
       - microservices-network
+    environment:
+      - SPRING_PROFILES_ACTIVE=default
     healthcheck:
       test: ["CMD-SHELL", "curl -f http://localhost:8080/actuator/health || exit 1"]
       interval: 30s
