--- a/microservice-admin/src/main/resources/application.yml
+++ b/microservice-admin/src/main/resources/application.yml
@@ -1,11 +1,20 @@
 spring:
   application:
-    name: msvc-admin
+    name: admin-service
+
+  cloud:
+    config:
+      uri: http://config-server:8888
+      fail-fast: true
+
   config:
-    import: optional:configserver:http://config-server:8888
+    import: "optional:configserver:"
+
+server:
+  port: 8097
 
 eureka:
   client:
     service-url:
-      defaultZone: http://eureka-server:8761/eureka
+      defaultZone: http://eureka-server:8761/eureka/
 
