--- a/microservice-eureka/src/main/resources/application.yml
+++ b/microservice-eureka/src/main/resources/application.yml
@@ -2,12 +2,21 @@ spring:
   application:
     name: eureka-server
 
+  cloud:
+    config:
+      uri: http://config-server:8888
+      fail-fast: true
+
+  config:
+    import: "optional:configserver:"
+
 server:
   port: 8761
 
 eureka:
   instance:
     hostname: eureka-server
+
   client:
-    registerWithEureka: false
-    fetchRegistry: false
+    register-with-eureka: false
+    fetch-registry: false
